# search_engine

./: .gitignore  Cargo.toml  config.toml  crawler_v2.md  modal_app.py  roadmap.md  seeds.md  start_pipeline.sh
.cargo/: config.toml
reports/: final_report_template.md
src/: config.rs  lib.rs  main.rs  storage.rs
src/chunking/: chaining.rs  context.rs  mod.rs  sentencizer.rs
src/crawler/: canon.rs  dns.rs  fetch.rs  mod.rs  parse.rs  persist.rs  policy.rs  recover.rs  robots.rs  scheduler.rs  types.rs
src/embeddings/: bulk.rs  client.rs  mod.rs
src/extraction/: density.rs  metadata.rs  mod.rs  normalizer.rs
src/knowledge/: mod.rs  panel.rs  wikipedia.rs
src/search/: bruteforce.rs  hnsw.rs  lexical.rs  mod.rs  query.rs  vector_index.rs
src/web/: mod.rs  serp.rs  tracking.rs
src/web/templates/: base.html  results.html  search.html
training/: export_onnx.py  requirements.txt  train_chaining.py
updates/: week1.md  week2.md  week3.md  week4.md  week5.md  week6.md  week7.md  week8.md
