[package]
name = "search_engine"
version = "0.1.0"
edition = "2024"
default-run = "search_engine"

[dependencies]
axum = "0.8"
base64 = "0.22"
bincode = "1"
futures = "0.3.31"
kuchiki = "0.8.1"
publicsuffix = "2"
reqwest = { version = "0.13.1", features = ["json"] }
rocksdb = "0.24.0"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = "0.3.45"
tokio = { version = "1", features = ["full"] }
toml = "1.0.3"
rayon = "1.11"
tantivy = "0.25"
fastembed = "=4.9.1"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
ndarray = "0.16"
bytemuck = "1.18"
aes-gcm = "0.10"
rand = "0.8"
dashmap = "6"
hnsw_rs = "0.3.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5.8"
rlimit = "0.11.0"
ureq = "3.2.0"
regex = "1"
urlencoding = "2"

# macOS: CoreML (Apple Neural Engine / GPU)
[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "=2.0.0-rc.9", default-features = false, features = ["ndarray", "coreml"] }

# Windows / Linux: CUDA (NVIDIA GPU)
[target.'cfg(not(target_os = "macos"))'.dependencies]
ort = { version = "=2.0.0-rc.9", default-features = false, features = ["ndarray", "cuda"] }

[profile.dev]
opt-level = 1              # avoids OOM on large ML workloads in debug mode

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
